@@ -43,6 +43,7 @@ Revision history for SPVM
         * Add SPVM String Buffer Native APIs. The document is SPVM::Document::NativeAPI::StringBuffer.
         * Add SPVM Allocator Native APIs. The document is SPVM::Document::NativeAPI::Allocator.
         * Improve SPVM::Document::NativeAPI::Compiler.
+        * Improve SPVM::Document::NativeAPI::Runtime.
         
         [BUG FIX]
         * Fix the bug that multi-dimensional array can't assing to any object array "object[]".
